[metadata]
name = volvisualizer

url = https://github.com/GBERESEARCH/volvisualizer

author = GBERESEARCH
author_email = gberesearch@gmail.com
version = attr: volvisualizer.__version__

description = Extract and visualize implied volatility from option data.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir=
    =src
packages=find:

install_requires = 
    numpy >= 1.16.2, <=1.26.4
    scipy >= 1.4.1
    pytz >= 2018.9
    pandas >= 1.0.0
    matplotlib >= 3.0.3, <=3.5.3
    plotly >= 4.3.0 
    beautifulsoup4 >= 4.7.1
    lxml >=4.3.2
    html5lib >=1.1
    yfinance >= 0.2.40

[options.packages.find]
where=src