[metadata]
name = volvisualizer

url = https://github.com/GBERESEARCH/volvisualizer

author = GBERESEARCH
author_email = gberesearch@gmail.com
version = attr: volvisualizer.__version__

description = Extract and visualize implied volatility from option data.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir=
    =src
packages=find:

install_requires = 
    matplotlib >= 3.0.3
    plotly >= 4.3.0 
    volvisdata >= 1.0.1

[options.packages.find]
where=src